# vgi-rerank

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  rerank_worker.py  serve.py
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: scalars.test  tables.test
tests/: harness.py  test_client_integration.py  test_scalars.py  test_tables.py
vgi_rerank/: __init__.py  models.py  scalars.py  schema_utils.py  tables.py
